# INF2004_ES_P6K

./: Buddy 2_ADC.c  Buddy 2_ADC.h  Buddy 2_PWM.c  Buddy 2_PWM.h  Buddy 2_Pulses.c  Buddy 2_Pulses.h  CMakeLists.txt  README.md  backup.c  buddy1.h  buddy2.c  buddy2.h  buddy3.c  buddy3.h  cgi.h  htmldata.c  lwipopts.h  lwipopts_examples_common.h  main.c  main1.c  ogmain.c  pico_sdk_import.cmake  project.c  ssi.h  swd_debugger.h  test.c
html_files/: index.shtml  index1.shtml  styles.css
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/: CMakeLists.txt
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: hw_config.c
no-OS-FatFS-SD-SPI-RPi-Pico/: CMakeLists.txt
project/: CMakeLists.txt  main.c
